Clean up ad integration section in index.html
Removed outdated ad integration notes and placeholder.

--- a/index.html
+++ b/index.html
@@ -1,16 +1,4 @@
 <!--
-File 1: index.html
-Save this block as `index.html`.
-
-
-Notes:
-- For mobile apps using AdMob, integrate AdMob through the Android/iOS SDKs (not via this web page).
-- If you plan to show ads on a website, replace the AD_PLACEHOLDER with your Google AdSense/Ad Manager snippet.
-- This page includes a link to the privacy policy (privacy.html) and a placeholder for an ad block.
--->
-
-
-<!doctype html>
 <html lang="en">
 <head>
 <meta charset="utf-8">
@@ -36,25 +24,9 @@ Minesweeper Legends is a strategic update to the classic puzzle game. It adds a 
 
 
 <section style="margin-top:20px;">
-<h2>Ad Integration</h2>
-<p>
-This application uses Google AdMob to serve advertisements. If you are hosting a companion website and wish to display ads here, replace the placeholder below with your Google AdSense or Google Publisher Tag code.
-</p>
-
-
-<!-- AD PLACEHOLDER: replace the following block with your web ad code if applicable -->
-<div style="border:1px dashed #ccc; padding:18px; margin-top:12px; text-align:center;">
-<strong>Ad placeholder</strong>
-<div style="margin-top:8px; font-size:13px; color:#666;">Replace this block with your Google AdSense / GPT ad unit code if you intend to run ads on the web.</div>
-</div>
-<!-- End AD PLACEHOLDER -->
-</section>
-
-
-<section style="margin-top:20px;">
 <h2>Privacy</h2>
 <p>
-For details about what data is collected, how it is used, and how users can manage choices, please review the <a href="privacy.html">Privacy Policy</a>.
+For details about what data is collected and how it is used by the app (including ad-related data from third-party ad networks), please review the <a href="privacy.html">Privacy Policy</a>.
 </p>
 </section>
 
@@ -69,4 +41,6 @@ For details about what data is collected, how it is used, and how users can mana
 <footer style="text-align:center; padding:18px 8px; color:#888; font-size:13px;">
 <div>© Minesweeper Legends</div>
 <div style="margin-top:6px;"><a href="privacy.html">Privacy Policy</a></div>
+</footer>
+</body>
 </html>
