--- a/index.html
+++ b/index.html
@@ -1,45 +1,39 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Minesweeper Legends</title>
-<meta name="description" content="Minesweeper Legends - modern Minesweeper with health, energy, sonar and themed visuals.">
-<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Minesweeper Legends</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 40px;
+            line-height: 1.6;
+        }
+        a {
+            color: #007bff;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
-<header style="padding:24px; text-align:center; background:#111; color:#fff;">
-<h1 style="margin:0; font-family:system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;">Minesweeper Legends</h1>
-<p style="margin:6px 0 0; opacity:0.85;">A modern take on the classic minefield puzzle.</p>
-</header>
+    <h1>Minesweeper Legends</h1>
+    <p>
+        Welcome to the official support page of Minesweeper Legends.  
+        This page provides support information and access to the privacy policy used in the application.
+    </p>
 
+    <h2>Support</h2>
+    <p>If you need help or want to report an issue, you can contact us at:</p>
+    <p><strong>Email:</strong> ozgun.gungor@hotmail.com</p>
 
-<main style="max-width:880px; margin:28px auto; padding:0 16px; font-family:system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;">
-<section>
-<h2>About</h2>
-<p>
-Minesweeper Legends is a strategic update to the classic puzzle game. It adds a health and energy system, special abilities such as Sonar and Heal, multiple themes, and a custom board mode. The app is built with SwiftUI for iOS.
-</p>
-</section>
-
-
-<section style="margin-top:20px;">
-<h2>Privacy</h2>
-<p>
-For details about what data is collected and how it is used by the app (including ad-related data from third-party ad networks), please review the <a href="privacy.html">Privacy Policy</a>.
-</p>
-</section>
-
-
-<section style="margin-top:20px;">
-<h2>Support</h2>
-<p>If you have questions or need support, contact: <a href="mailto:ozgun.gungor@hotmail.com">ozgun.gungor@hotmail.com</a></p>
-</section>
-</main>
-
-
-<footer style="text-align:center; padding:18px 8px; color:#888; font-size:13px;">
-<div>© Minesweeper Legends</div>
-<div style="margin-top:6px;"><a href="privacy.html">Privacy Policy</a></div>
-</footer>
+    <h2>Privacy Policy</h2>
+    <p>
+        To view the full privacy policy of the Minesweeper Legends application, please visit:  
+        <a href="privacy.html">Privacy Policy</a>
+    </p>
 </body>
 </html>
